ci: build contentlayer

--- a/content/posts/hello.mdx
+++ b/content/posts/hello.mdx
@@ -7,3 +7,9 @@ published: true
 Hello, Next.js!
 
 You can import and use React components in MDX files.
+
+```js
+function Hello() {
+  console.log('Hello World')
+}
+```
